package aula07.Ex3;

public abstract class Figure {

    //Create indentation
    protected static StringBuffer indent = new StringBuffer();
    public abstract void draw();
}
