@startuml

title __EX3's Class Diagram__\n

  package aula07.Ex3 {
    class Bloco {
        {static} - INDENTATION : int
        - position : String
        - drawing : List<Figure>
        + Bloco()
        + add()
        + draw()
    }
  }
  

  package aula07.Ex3 {
    class Circulo {
        - color : String
        + Circulo()
        + draw()
    }
  }
  

  package aula07.Ex3 {
    abstract class Figure {
        {static} # indent : StringBuffer
        {abstract} + draw()
    }
  }
  

  package aula07.Ex3 {
    class GeometricFigures {
        {static} + main()
    }
  }
  

  package aula07.Ex3 {
    class Quadrado {
        - color : String
        + Quadrado()
        + draw()
    }
  }
  

  package aula07.Ex3 {
    class Rectangulo {
        - name : String
        + Rectangulo()
        + draw()
    }
  }
  

  Bloco -up-|> Figure
  Circulo -up-|> Figure
  Quadrado -up-|> Figure
  Rectangulo -up-|> Figure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
